# yandex-cpp-middle-sprint2

./: CMakeLists.txt  README.md  build.sh  task.md
.devcontainer/: Dockerfile
include/: parse.hpp  scan.hpp  types.hpp
tests/: scan_test.cpp
